# Speckit-5-phase-hackhtone

./: SUBMISSION_GUIDE.md
Phase1/: README.md
Phase1/todo-cli/: .gitignore  FUNCTIONAL_REQUIREMENTS_VERIFICATION.md  README.md  SUCCESS_CRITERIA_VERIFICATION.md  VERIFICATION.md  pyproject.toml
Phase1/todo-cli/src/todo_cli/: main.py
Phase1/todo-cli/src/todo_cli/cli/: todo_cli.py
Phase1/todo-cli/src/todo_cli/models/: task.py
Phase1/todo-cli/src/todo_cli/output/: rich_output.py
Phase1/todo-cli/src/todo_cli/services/: todo_service.py
Phase1/todo-cli/tests/: __init__.py  test_dependencies.py  test_integration.py  test_main.py
Phase2/: AUTH_FLOW.md  CLAUDE.md  README.md
Phase2/backend-app/: .env.example  Dockerfile  README.md  README_DEPLOY.md  docker-compose.yml  main.py  middleware.py  models.py  pyproject.toml  rate_limit_general.py  requirements.txt  test_ai_agent_integration.py  test_requirements.txt  unified_server.py  verify_system.py
Phase2/backend-app/routes/: chat.py  tasks.py
Phase2/backend-app/task_agents/: runner.py
Phase2/backend-app/task_mcp/: __init__.py
Phase2/backend-app/task_mcp/tools/: __init__.py  task_tools.py
Phase2/frontend/: Dockerfile  README_ENV.md  next.config.ts  package-lock.json
Phase3/: README.md
Phase3/backend-app/: main.py  token_refresh.py  verify_agent_tools.py
Phase3/frontend/: docker-compose.yml  package.json
Phase4/: README.md  README_PHASES_EXPLANATION.md  test_operations.py
Phase5/: KUBERNETES_GUIDE.md
Phase5/frontend/: .gitignore  (+1 more)
Todo-App-All-Phases/: AUTH_FLOW.md  KUBERNETES_GUIDE.md  README.md
(+257 files in other folders)
