[project]
name = "todo-cli"
version = "0.1.0"
description = "A command-line todo application with rich terminal output"
readme = "README.md"
authors = [
    { name = "Muhammad-Azan-1", email = "azan96593@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
todo-cli = "todo_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short"
]
