[project]
name = "backend-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad-Azan-1", email = "azan96593@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.0",
    "pyjwt[crypto]>=2.0.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]

[project.scripts]
backend-app = "backend_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
